<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pplogin2"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="56dp"
      android:text="@string/primapictures_app"
      android:textColor="@color/army"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="11dp"
      android:text="@string/register_a_new_account"
      android:textColor="#757575"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="325dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="22dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/register"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.488"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/user"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/username"
        android:textColor="#546E7A"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="#546E7A" />

  </LinearLayout>

  <Button
      android:id="@+id/register"
      android:layout_width="318dp"
      android:layout_height="55dp"
      android:layout_marginBottom="35dp"
      android:backgroundTint="@color/army"
      android:text="@string/register"
      app:cornerRadius="35dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.505"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      app:layout_constraintVertical_bias="1.0" />
  <TextView
      android:id="@+id/textView9"
      android:layout_width="104dp"
      android:layout_height="74dp"
      android:text="@string/_21_02_2022_10119124_primarazaq_nph_if_3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>