<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/grey"
        android:drawableEnd="@drawable/user2"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cari"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/army"
        android:drawableEnd="@drawable/search"
        android:text="@string/cari_photographer_videographer_terdekat"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/red"
        android:drawableEnd="@drawable/logout"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="104dp"
        android:layout_height="74dp"
        android:text="@string/_21_02_2022_10119124_primarazaq_nph_if_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>